--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "googleapis": "^107.0.0",
     "next": "12.2.5",
-    "react": "18.x.x",
+    "react": "17.0.2",
     "react-countdown": "^2.3.2",
-    "react-dom": "18.2.0",
+    "react-dom": "17.0.2",
     "react-icons": "^4.4.0"
   },
   "devDependencies": {
