--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "googleapis": "^107.0.0",
     "next": "12.2.5",
+    "next-pwa": "^5.6.0",
     "react": "17.0.2",
     "react-countdown": "^2.3.2",
     "react-dom": "17.0.2",
