--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "googleapis": "^107.0.0",
+    "jotai": "^1.8.1",
     "next": "12.2.5",
     "next-pwa": "^5.6.0",
     "react": "17.0.2",
