--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "vercel": "vercel build && vercel deploy --prebuilt"
+    "vercel": "vercel build && vercel --prod"
   },
   "dependencies": {
     "googleapis": "^107.0.0",
