--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.18.0",
+    "@types/react": "^18.0.27",
     "autoprefixer": "^10.4.8",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.9.5"
   }
 }
