Update to Next13

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,12 +17,18 @@
     "isolatedModules": true,
     "moduleResolution": "node",
     "jsx": "preserve",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
