--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "dependencies": {
     "googleapis": "^107.0.0",
     "jotai": "^1.8.1",
-    "next": "12.2.5",
+    "next": "^13.1.6",
     "next-pwa": "^5.6.0",
-    "react": "17.0.2",
+    "react": "^18.2.0",
     "react-countdown": "^2.3.2",
-    "react-dom": "17.0.2",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "swr": "^1.3.0"
   },
@@ -25,7 +25,7 @@
     "@types/react": "^18.0.27",
     "autoprefixer": "^10.4.8",
     "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5",
+    "eslint-config-next": "^13.1.6",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.9.5"
