--- a/package.json
+++ b/package.json
@@ -3,21 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "vercel": "vercel build && vercel --prod"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^1.0.0-beta.6",
+    "clsx": "^1.2.1",
     "googleapis": "^107.0.0",
     "jotai": "^1.8.1",
-    "next": "^13.1.6",
+    "next": "^13.2.1",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-countdown": "^2.3.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-loading-skeleton": "^3.1.1",
     "swr": "^1.3.0"
   },
   "devDependencies": {
@@ -25,7 +28,8 @@
     "@types/react": "^18.0.27",
     "autoprefixer": "^10.4.8",
     "eslint": "8.22.0",
-    "eslint-config-next": "^13.1.6",
+    "eslint-config-next": "^13.2.1",
+    "eslint-plugin-tailwindcss": "^3.9.0",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.9.5"
