--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "vercel": "vercel build && vercel --prod"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.29.5",
+    "@trpc/client": "^10.23.0",
+    "@trpc/next": "^10.23.0",
+    "@trpc/react-query": "^10.23.0",
+    "@trpc/server": "^10.23.0",
     "googleapis": "^107.0.0",
     "jotai": "^1.8.1",
     "next": "12.2.5",
@@ -18,14 +23,18 @@
     "react-countdown": "^2.3.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.4.0",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.18.0",
+    "@types/node": "^18.16.3",
+    "@types/react": "^18.2.0",
     "autoprefixer": "^10.4.8",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.1.8",
+    "typescript": "^5.0.4"
   }
 }
