--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@trpc/next": "^10.23.0",
     "@trpc/react-query": "^10.23.0",
     "@trpc/server": "^10.23.0",
+    "cheerio": "1.0.0-rc.12",
     "clsx": "^1.2.1",
+    "dayjs": "^1.11.7",
     "googleapis": "^107.0.0",
     "jotai": "^1.8.1",
     "next": "12.2.5",
