--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
     "@trpc/react-query": "^10.23.0",
     "@trpc/server": "^10.23.0",
     "cheerio": "1.0.0-rc.12",
+    "classnames": "^2.3.2",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
+    "framer-motion": "^10.12.16",
     "googleapis": "^107.0.0",
     "jotai": "^1.8.1",
     "next": "12.2.5",
     "next-pwa": "^5.6.0",
-    "react": "17.0.2",
+    "react": "18.2.0",
     "react-countdown": "^2.3.2",
-    "react-dom": "17.0.2",
+    "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-modal-sheet": "^1.10.2",
+    "react-tooltip": "^5.13.1",
     "swr": "^1.3.0",
     "zod": "^3.21.4"
   },
