--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-countdown": "^2.3.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-modal-sheet": "^1.10.2",
     "swr": "^1.3.0",
     "zod": "^3.21.4"
