--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "vercel": "vercel build && vercel --prod"
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.29.5",
-    "@trpc/client": "^10.23.0",
-    "@trpc/next": "^10.23.0",
-    "@trpc/react-query": "^10.23.0",
-    "@trpc/server": "^10.23.0",
+    "@tanstack/react-query": "^4.29.7",
+    "@trpc/client": "^10.26.0",
+    "@trpc/next": "^10.26.0",
+    "@trpc/react-query": "^10.26.0",
+    "@trpc/server": "^10.26.0",
     "cheerio": "1.0.0-rc.12",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
@@ -22,8 +22,9 @@
     "framer-motion": "^10.12.16",
     "googleapis": "^107.0.0",
     "jotai": "^1.8.1",
-    "next": "12.2.5",
+    "next": "13.4.2",
     "next-pwa": "^5.6.0",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-countdown": "^2.3.2",
     "react-dom": "18.2.0",
@@ -34,13 +35,20 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/eslint": "^8.37.0",
+    "@types/prettier": "^2.7.2",
     "@netlify/plugin-nextjs": "^4.18.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
     "@types/node": "^18.16.3",
     "@types/react": "^18.2.0",
     "autoprefixer": "^10.4.14",
-    "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint": "8.40.0",
+    "eslint-config-next": "13.4.2",
     "postcss": "^8.4.23",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwind-scrollbar": "^3.0.1",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4"
