--- a/package.json
+++ b/package.json
@@ -35,18 +35,23 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@types/eslint": "^8.37.0",
-    "@types/prettier": "^2.7.2",
     "@netlify/plugin-nextjs": "^4.18.0",
+    "@types/eslint": "^8.37.0",
+    "@types/node": "^18.16.3",
+    "@types/prettier": "^2.7.2",
+    "@types/react": "^18.2.0",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
-    "@types/node": "^18.16.3",
-    "@types/react": "^18.2.0",
     "autoprefixer": "^10.4.14",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-standard-with-typescript": "^35.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.32.2",
     "postcss": "^8.4.23",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwind-scrollbar": "^3.0.1",
