--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^4.4.0",
     "react-loading-skeleton": "^3.3.1",
     "react-modal-sheet": "^1.10.2",
+    "react-tailwindcss-select": "^1.8.5",
     "swr": "^1.3.0",
     "zod": "^3.21.4"
   },
