--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@trpc/next": "^10.26.0",
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
+    "@uidotdev/usehooks": "^2.4.0",
     "cheerio": "1.0.0-rc.12",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
