--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-modal-sheet": "^1.10.2",
     "react-tailwindcss-select": "^1.8.5",
     "swr": "^1.3.0",
+    "tailwind-merge": "^2.2.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
