--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^10.12.16",
     "googleapis": "^107.0.0",
     "jotai": "^1.8.1",
+    "lucide-react": "^0.303.0",
     "next": "14.0.1",
     "next-pwa": "^5.6.0",
     "nextjs-progressbar": "^0.0.16",
