--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ SHEET_NAME="JULI-SEP 23"
 NEXT_PUBLIC_SHEET_NAME="JULI-SEP 23"
 NEXT_PUBLIC_GOOGLE_ANALYTICS='G-65NX3H4XL3'
 NEXT_PUBLIC_API_URL=http://localhost:3000
+NEXT_PUBLIC_NIMBLE
