--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.2.0",
     "react-error-boundary": "^4.0.12",
     "react-loading-skeleton": "^3.3.1",
+    "react-share": "^5.1.0",
     "tailwind-merge": "^2.2.0",
     "zod": "^3.21.4"
   },
